@@ -1,16 +1,18 @@
 {
-  "timestamp" : "2022-10-20T00:45:08Z",
-  "count_outdated" : 23,
-  "uniques_outdated" : 2,
-  "count" : 31,
-  "uniques" : 3,
+  "timestamp" : "2024-02-23T00:55:24Z",
+  "count_outdated" : 31,
+  "uniques_outdated" : 3,
+  "count" : 35,
+  "uniques" : 5,
   "views" : [
     {
-      "timestamp": "2022-10-06T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 8, 8 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "timestamp": "2024-02-22T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
+      "count_decinc": [ 0, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
