@@ -1,11 +1,11 @@
 {
-  "count": 8,
-  "uniques": 1,
+  "count": 4,
+  "uniques": 2,
   "views": [
     {
-      "timestamp": "2022-10-06T00:00:00Z",
-      "count": 8,
-      "uniques": 1
+      "timestamp": "2024-02-22T00:00:00Z",
+      "count": 4,
+      "uniques": 2
     }
   ]
 }
